[package]
name = "cosmilite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["net", "full", "tracing"] }
tracing = "0.1.37"
rand = "0.8.5"

[dev-dependencies]
tracing-subscriber = "0.3.17"
color-eyre = "0.6.2"